--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
 html {
     font-family: "arial", Times, sans-serif;
+}
+
+md-sidenav-container {
+    top: 64px !important;
 }
