--- a/client/src/app/components/test/instantaneous-report-test/instantaneous-report-test.component.html
+++ b/client/src/app/components/test/instantaneous-report-test/instantaneous-report-test.component.html
@@ -9,7 +9,7 @@
             {{site.siteName}}
         </option>
     </select>
-    <button (click)="getData()">Apply</button>
+    <button md-button (click)="getData()">Apply</button>
 </div>
 <div *ngIf="data.length > 0">
     <table>
