--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -1,10 +1,19 @@
-<md-toolbar>
-    <button md-icon-button (click)="sidenav.toggle()">
-        <md-icon>menu</md-icon>
-    </button>
-    <span>TEST</span>
+<md-toolbar color="primary">
+	<div class="toolbar-content flex-container" fxLayout="row" fxLayoutAlign="space-between center">
+		<div class="flex-item" fxFlex="40px">
+			<button md-icon-button (click)="sidenav.toggle()">
+				<md-icon>menu</md-icon>
+			</button>
+		</div>
+		<div class="logo-container flex-item" fxFlex>
+			<img src="http://www.lvt-ia.org/wp-content/uploads/2015/09/LASanitation_logo_fin.png">
+		</div>
+		<div class="flex-item" fxFlex="100px">
+			<button md-raised-button color="warn" (click)="logout()">LOGOUT</button>
+		</div>
+	</div>
 </md-toolbar>
 <md-sidenav-container fullscreen>
-    <md-sidenav #sidenav mode="over" opened="false">Drawer content</md-sidenav>
-    <router-outlet></router-outlet>
+	<md-sidenav #sidenav mode="over" opened="false" class="sidenav-contents">Drawer content</md-sidenav>
+	<router-outlet></router-outlet>
 </md-sidenav-container>
