--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,7 +2,7 @@
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 
 html {
-    font-family: "arial", Times, sans-serif;
+    font-family: Roboto,"Helvetica Neue",sans-serif;
     height: 100%;
     body {
         margin: 0;
@@ -10,6 +10,10 @@ html {
     }
 }
 
+// Navbar + Sidenav
 md-sidenav-container {
     top: 64px !important;
+}
+md-toolbar-row {
+    height: 64px !important;
 }
