Changed JWT storage to sessionStorange, changed to allow all OPTIONS requests, moved some common strings to constants, file upload work in progress.

--- a/client/src/app/components/test/instantaneous-upload-test/instantaneous-upload-test.component.html
+++ b/client/src/app/components/test/instantaneous-upload-test/instantaneous-upload-test.component.html
@@ -9,3 +9,7 @@
 
 <textarea [(ngModel)]="_file"></textarea>
 <button (click)="upload()">Upload</button>
+
+<div>
+<file-upload #fu (change)="fu.upload()"></file-upload>
+</div>
