going to sleep good night

--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -1,3 +1,4 @@
+
 <md-toolbar color="primary">
 	<div class="toolbar-content flex-container" fxLayout="row" fxLayoutAlign="space-between center">
 		<div class="flex-item" fxFlex="40px">
@@ -5,15 +6,35 @@
 				<md-icon>menu</md-icon>
 			</button>
 		</div>
-		<div class="logo-container flex-item" fxFlex>
-			<img src="http://www.lvt-ia.org/wp-content/uploads/2015/09/LASanitation_logo_fin.png">
+		<div class="logo-container flex-item" fxFlex routerLink="dashboard" routerLikeActive="active">
+			<a routerLink="dashboard" routerLikeActive="active">
+				<img src="http://www.lvt-ia.org/wp-content/uploads/2015/09/LASanitation_logo_fin.png">
+			</a>
 		</div>
 		<div class="flex-item" fxFlex="100px">
 			<button md-raised-button color="warn" (click)="logout()">LOGOUT</button>
 		</div>
 	</div>
+	<div class="navbar-shadow"></div>
 </md-toolbar>
 <md-sidenav-container fullscreen>
-	<md-sidenav #sidenav mode="over" opened="false" class="sidenav-contents">Drawer content</md-sidenav>
+	<md-sidenav #sidenav mode="over" opened="false" class="sidenav-contents">
+		<div>
+			<md-list>
+				<md-list-item>
+					<a routerLink="dashboard" routerLikeActive="active">
+						<md-icon>dashboard</md-icon>
+						Dashboard
+					</a>
+				</md-list-item>
+				<md-list-item>
+					<a routerLink="users" routerLikeActive="active">
+						<md-icon>people</md-icon>
+						Manage Users
+					</a>
+				</md-list-item>
+			</md-list>
+		</div>
+	</md-sidenav>
 	<router-outlet></router-outlet>
 </md-sidenav-container>
