--- a/client/src/app/components/test/instantaneous-upload-test/instantaneous-upload-test.component.html
+++ b/client/src/app/components/test/instantaneous-upload-test/instantaneous-upload-test.component.html
@@ -11,5 +11,5 @@
 <button (click)="upload()">Upload</button>
 
 <div>
-<file-upload #fu (change)="fu.upload()"></file-upload>
+<app-file-upload #fu (change)="fu.upload()"></app-file-upload>
 </div>
