--- a/client/src/app/components/test/instantaneous-report-test/instantaneous-report-test.component.html
+++ b/client/src/app/components/test/instantaneous-report-test/instantaneous-report-test.component.html
@@ -1,39 +1,37 @@
-<div style="padding-bottom:24px">
-    <a href="/instantaneous_upload">Upload JSON File</a>
-    <a href="/instantaneous_test">Add Test Data</a>
-</div>
-<h3>Instantaneous Reports</h3>
-<div style="padding-bottom:5px">
-    <select [(ngModel)]="sites.selected">
-        <option *ngFor="let site of sites.list" [ngValue]="site">
-            {{site.siteName}}
-        </option>
-    </select>
-    <button md-button (click)="getData()">Apply</button>
-</div>
-<div *ngIf="data.length > 0">
-    <table>
-        <tr>
-            <th>Date</th>
-            <th>Barom.</th>
-            <th>Inspector</th>
-            <th>Grid</th>
-            <th>Start</th>
-            <th>End</th>
-            <th>Instrument</th>
-            <th>Reading</th>
-            <th>IME#</th>
-        </tr>
-        <tr *ngFor="let inst of data" [ngClass]="getStatus(inst.methaneLevel / 100)">
-            <td>{{getDate(inst.startTime)}}</td>
-            <td>{{inst.barometricPressure / 100}}</td>
-            <td>{{inst.user.firstname}} {{inst.user.lastname}}</td>
-            <td>{{inst.monitoringPoint.monitoringPointName}}</td>
-            <td>{{getTime(inst.startTime)}}</td>
-            <td>{{getTime(inst.endTime)}}</td>
-            <td>{{inst.instrument.serialNumber}}</td>
-            <td>{{inst.methaneLevel / 100}}</td>
-            <td>{{inst.imeNumber}}</td>
-        </tr>
-    </table>
+<div class="component">
+    <h3>Instantaneous Reports</h3>
+    <div style="padding-bottom:5px">
+        <md-select [(ngModel)]="sites.selected" placeholder="Site" style="width:200px;padding-right:32px;">
+            <md-option *ngFor="let site of sites.list" [value]="site">
+                {{site}}
+            </md-option>
+        </md-select>
+        <button md-raised-button color="accent" (click)="getData()">LOAD REPORT</button>
+    </div>
+    <div *ngIf="data.length > 0">
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Barom.</th>
+                <th>Inspector</th>
+                <th>Grid</th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Instrument</th>
+                <th>Reading</th>
+                <th>IME#</th>
+            </tr>
+            <tr *ngFor="let inst of data" [ngClass]="getStatus(inst.methaneLevel / 100)">
+                <td>{{getDate(inst.startTime)}}</td>
+                <td>{{inst.barometricPressure / 100}}</td>
+                <td>{{inst.user.userProfile.firstname}} {{inst.user.userProfile.lastname}}</td>
+                <td>{{inst.monitoringPoint.monitoringPointName}}</td>
+                <td>{{getTime(inst.startTime)}}</td>
+                <td>{{getTime(inst.endTime)}}</td>
+                <td>{{inst.instrument.serialNumber}}</td>
+                <td>{{inst.methaneLevel / 100}}</td>
+                <td>{{inst.imeNumber}}</td>
+            </tr>
+        </table>
+    </div>
 </div>
