--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -15,8 +15,21 @@
 	width: 250px;
 }
 
+.sidenav-section {
+
+}
+
+.sidenav-section-header {
+	color: #fff;
+    background: #999;
+    font-size: 0.8rem;
+    padding: 3px 20px;
+	text-transform: uppercase;
+}
+
 .sidenav-link {
 	height: 50px;
+	color: #555;
 	background: white;
 	border-bottom: solid 1px lightgray;
 	cursor: pointer;
