some ui updates

--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -40,8 +40,8 @@
 }
 
 .sidenav-link-active, .sidenav-link-active:hover {
-	background: #f44336;
-	color: white;
+	background: #FFD740;
+	font-weight: bold;
 }
 
 .sidenav-link-icon {
