--- a/client/src/app/components/user/user-base/user-base.component.html
+++ b/client/src/app/components/user/user-base/user-base.component.html
@@ -1,4 +1,4 @@
-<md-tab-group>
+<md-tab-group selectedIndex="1">
   <md-tab label="Overview">
     <app-user-overview></app-user-overview>
   </md-tab>
