--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -17,7 +17,7 @@
 	<div class="navbar-shadow"></div>
 </md-toolbar>
 <md-sidenav-container fullscreen>
-	<md-sidenav #sidenav mode="over" opened="false" class="sidenav-contents">
+	<md-sidenav #sidenav mode="side" opened="true" class="sidenav-contents">
 		<div>
 			<div class="sidenav-section" *ngFor="let section of sections">
 				<div class="sidenav-section-header">
