--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,33 @@
-DASHBOARD
+DASHBOARD<br />
+
+List of tests : <a href="../forbidden">Instantaneous</a> <a href="../forbidden">Integration</a> 
+<a href="../forbidden">Warmspot</a> <a href="../forbidden">Probe</a><br/>
+
+ <body>   
+
+<!--
+    <script>
+        //Array of images which you want to show: Use path you want.
+        var images = new Array('https://www.geosyntec.com/media/k2/items/cache/e208d5104268085aecc7ece94f6f710e_XL.jpg',
+        'http://www.laregionalagency.us/wp-content/uploads/2014/06/Discover.png',
+        'http://wastesorting.net/wp-content/uploads/2015/03/111.jpg');
+        var nextimage = 0;
+        doSlideshow();
+
+        function doSlideshow()
+        {
+            if(nextimage >= images.length)
+            {
+                nextimage = 0;
+            }
+            
+            background-image: url(images[nextimage++])
+            .fadeIn(500,function()
+            {
+                setTimeout(doSlideshow,1000);
+            });
+        }
+    </script>-->
+</body>
+ 
+
