--- a/client/src/app/components/test/instantaneous-report-test/instantaneous-report-test.component.html
+++ b/client/src/app/components/test/instantaneous-report-test/instantaneous-report-test.component.html
@@ -10,7 +10,7 @@
             <button md-raised-button (click)="getData()">VIEW REPORT</button>
         </div>
         <div *ngIf="data.length > 0" class="list-table">
-            <div class="list-table-header flex-container" fxLayout="row">
+            <div class="list-table-header-row flex-container" fxLayout="row">
                 <div class="flex-item" fxFlex>Date</div>
                 <div class="flex-item" fxFlex>Barom.</div>
                 <div class="flex-item" fxFlex>Inspector</div>
