--- a/client/src/app/components/user-group/user-groups/user-groups.component.html
+++ b/client/src/app/components/user-group/user-groups/user-groups.component.html
@@ -53,11 +53,8 @@
 		</div>
 	</md-card-content>
 	<md-card-actions>
-		<button md-button routerLink="../new-user-group">
-			NEW USER GROUP
-		</button>
-		<button md-button (click)="test()">
-			TEST
+		<button md-button (click)="openNewUserGroupDialog()">
+			NEW GROUP
 		</button>
 	</md-card-actions>
 </md-card>
