--- a/client/src/app/components/user/user-base/user-base.component.html
+++ b/client/src/app/components/user/user-base/user-base.component.html
@@ -3,6 +3,6 @@
     <app-user-overview></app-user-overview>
   </md-tab>
   <md-tab label="Profile">
-    <app-user-profile [user]="user"></app-user-profile>
+    <app-user-profile [user]="user" [isDataLoaded]="isDataLoaded"></app-user-profile>
   </md-tab>
 </md-tab-group>
