--- a/client/src/app/components/user/user-profile/user-profile.component.html
+++ b/client/src/app/components/user/user-profile/user-profile.component.html
@@ -1,84 +1,51 @@
-<div class="section-multiple-container flex-container" fxLayout="column" fxLayout.gt-sm="row">
-	<md-card class="section-multiple flex-item" fxFlex>
-		<md-card-content>
-			<h2>User Profile</h2>
-			<div class="flex-container" fxLayout="column">
-				<div class="flex-item" fxFlex>
+<div class="section-multiple-container flex-container">
+	<div *ngIf="user.person.firstname && user.person.lastname" class="section-title">
+		{{user.person.firstname}} {{user.person.lastname}}'s Profile
+	</div>
+	<div *ngIf="!user.person.firstname || !user.person.lastname" class="section-title">
+		User's Profile
+	</div>
+	<div fxLayout="column" fxLayout.gt-md="row">
+		<md-card class="section-multiple flex-item" fxFlex="37">
+			<md-card-content>
+				<div class="section-title">User Information</div>
+				<div *ngIf="!isDataLoaded" class="loading-indicator-container">
+					<md-spinner class="loading-indicator-spinner"></md-spinner>
+					<div class="loading-indicator-message">Loading...</div>
+				</div>
+				<div *ngIf="isDataLoaded" class="section-form-container">
 					<md-input-container class="md-input-full-width">
 						<input md-input placeholder="Username" [(ngModel)]="user.username" [disabled]="!isNew">
 					</md-input-container>
-				</div>
-				<div *ngIf="isNew" class="flex-item" fxFlex>
-					<md-input-container class="md-input-full-width">
+					<!--<md-input-container class="md-input-full-width">
 						<input md-input placeholder="Password" [(ngModel)]="user.password" type="password">
-					</md-input-container>
-				</div>
-				<div class="flex-item" fxFlex>
+					</md-input-container>-->
 					<md-input-container class="md-input-full-width">
 						<input md-input placeholder="First Name" [(ngModel)]="user.person.firstname">
 					</md-input-container>
-				</div>
-				<div class="flex-item" fxFlex>
 					<md-input-container class="md-input-full-width">
 						<input md-input placeholder="Middle Name" [(ngModel)]="user.person.middlename">
 					</md-input-container>
-				</div>
-				<div class="flex-item" fxFlex>
 					<md-input-container class="md-input-full-width">
 						<input md-input placeholder="Last Name" [(ngModel)]="user.person.lastname">
 					</md-input-container>
-				</div>
-				<div class="flex-item" fxFlex>
 					<md-input-container class="md-input-full-width">
 						<input md-input placeholder="Email" [(ngModel)]="user.person.emailAddress">
 					</md-input-container>
 				</div>
-			</div>
-		</md-card-content>
-		<md-card-actions>
-			<button md-raised-button color="accent" (click)="save()">
-				SAVE
-			</button>
-		</md-card-actions>
-	</md-card>
-	<md-card class="section-multiple flex-item" fxFlex>
-		<md-card-content>
-			<h2>User Profile</h2>
-			<div>
-				<md-input-container class="md-input-full-width">
-					<input md-input placeholder="Username" [(ngModel)]="user.username" [disabled]="!isNew">
-				</md-input-container>
-			</div>
-			<div *ngIf="isNew">
-				<md-input-container class="md-input-full-width">
-					<input md-input placeholder="Password" [(ngModel)]="user.password" type="password">
-				</md-input-container>
-			</div>
-			<div>
-				<md-input-container class="md-input-full-width">
-					<input md-input placeholder="First Name" [(ngModel)]="user.person.firstname">
-				</md-input-container>
-			</div>
-			<div>
-				<md-input-container class="md-input-full-width">
-					<input md-input placeholder="Middle Name" [(ngModel)]="user.person.middlename">
-				</md-input-container>
-			</div>
-			<div>
-				<md-input-container class="md-input-full-width">
-					<input md-input placeholder="Last Name" [(ngModel)]="user.person.lastname">
-				</md-input-container>
-			</div>
-			<div>
-				<md-input-container class="md-input-full-width">
-					<input md-input placeholder="Email" [(ngModel)]="user.person.emailAddress">
-				</md-input-container>
-			</div>
-		</md-card-content>
-		<md-card-actions>
-			<button md-raised-button color="accent" (click)="save()">
-				SAVE
-			</button>
-		</md-card-actions>
-	</md-card>
+			</md-card-content>
+		</md-card>
+		<md-card class="section-multiple flex-item" fxFlex>
+			<md-card-content>
+				<div class="section-title">User Groups</div>
+				<app-user-group-selector [selectedGroups]="user.userGroups"></app-user-group-selector>
+				<div>NOTE: Changes made to user's groups will not be reflected until the user's next login.</div>
+			</md-card-content>
+		</md-card>
+	</div>
+</div>
+<div class="fab-action-button-container">
+	<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="above">
+		<md-icon>save</md-icon>
+	</button>
 </div>
