hopefully nothing is broken

--- a/client/src/app/components/user-group/user-groups/user-groups.component.html
+++ b/client/src/app/components/user-group/user-groups/user-groups.component.html
@@ -47,7 +47,7 @@
 					{{user.person.employeeId}}
 				</div>-->
 				<div class="flex-item" fxFlex="50px" style="text-align:center;">
-					<md-icon style="color:#F00;cursor:pointer;">delete</md-icon>
+					<md-icon (click)="delete(group)" style="color:#F00;cursor:pointer;">delete</md-icon>
 				</div>
 			</div>
 		</div>
